Fix page width (preventing horizontal scrolling)

--- a/css/structure/_umobi.page.sass
+++ b/css/structure/_umobi.page.sass
@@ -2,7 +2,8 @@
 .ui-dialog
   top: 0
   left: 0
-  width: 100%
+  right: 0
+  // width: 100%
   min-height: 100%
   position: absolute
   display: none
